<resources>
    <string name="app_name">HappyLife</string>

    <string name="home">Home</string>
    <string name="weather">Weather</string>
    <string name="favor">Favor</string>
    <string name="mine">Mine</string>
    <string name="friends">Friends</string>

    <string-array name="english_week_string_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="chinese_week_string_array">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>

    <string name="list_dialog_title">Dynamic Update</string>

    <string name="func_dialog_title">Function</string>

    <string-array name="list_dialog_items">
        <item>Change week start with sun</item>
        <item>Change week start with mon</item>
        <item>Change week start with sat</item>
        <item>Change select mode：single/default</item>
        <item>Change month and week view with CustomView</item>
        <item>MonthViewShowMode：all</item>
        <item>MonthViewShowMode：only_current</item>
        <item>MonthViewShowMode：fix</item>
    </string-array>

    <string-array name="func_dialog_items">
        <item>Expand CalendarLayout</item>
        <item>Shrink CalendarLayout</item>
        <item>scrollToPre</item>
        <item>scrollToNext</item>
        <item>scrollToCurrent</item>
        <item>Limit calendar range</item>
        <item>Show range</item>
    </string-array>

    <string name="new_schedule">New Schedule</string>
    <string name="new_schedule_title_hint">Please select note type:</string>
    <string name="new_schedule_content_hint">Note Content</string>
    <string name="new_schedule_confirm">Confirm</string>
    <string name="new_schedule_date_hint">Note Date</string>

    <string-array name="note_types">
        <item>Sport</item>
        <item>Study</item>
        <item>Relax</item>
        <item>Baby</item>
    </string-array>

    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="confirm">Confirm</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>

    <string name="select_time">Select Time</string>
    <string name="current_time">Current Time</string>
    <string name="start_time">Start Time</string>

    <string name="no_notes">You havent made a plan yet, so hurry up and make a plan!</string>

    <string name="person_space">Person Space</string>
    <string name="person_level">Lv%1$d</string>

    <string name="login_welcome">Welcome</string>
    <string name="aphorisms">&#160;&#160;&#160;&#160;&#160;&#160;懒惰是很奇怪的东西，它使你以为那是安逸，是休息，是福气；但实际上它所给你的是无聊，是倦怠，是消沉；它剥夺你对前途的希望，割断你和别人之间的友情，使你心胸日渐狭窄，对人生也越来越怀疑。</string>
    <string name="aphorisms_author">----罗曼罗兰</string>
    <string name="login_phone_hint">请输入电话号码</string>
    <string name="login_verify_hint">请输入验证码</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="obtain_verify_code">获取验证码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="phone_error">电话号码格式不正确，请重新输入</string>
    <string name="verify_code_error">验证码不正确，请重新输入</string>
    <string name="new_pwd_error">密码只支持数字，请重新输入</string>

    <string name="back">返回</string>
    <string name="enter">登入</string>
    <string name="login">登录</string>
    <string name="login_pwd_success">登录成功！</string>
    <string name="login_pwd_failed">密码错误，请重新输入</string>
    <string name="register">注册</string>
    <string name="register_success">恭喜你注册成功！</string>
    <string name="register_failed">很抱歉，该手机号已经注册过了，请换个手机号试试吧！</string>
    <string name="account_login">已有帐号，去登录</string>
    <string name="verify_login">验证码登录</string>
    <string name="goto_register">没有账号？去注册</string>
    <string name="shengming">未注册的手机号验证后将自动创建花见帐号登入及代表您已经同意&#160;《花见隐私政策》&#160;</string>

</resources>