<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/new_schedule"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/new_schedule_title_hint"
            android:textColor="@color/tip_title_text"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:dropDownHorizontalOffset="50dp"
            android:dropDownVerticalOffset="20dp"
            android:entries="@array/note_types" />
    </LinearLayout>

    <EditText
        android:id="@+id/note_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/note_detail_bg"
        android:gravity="top"
        android:hint="@string/new_schedule_content_hint"
        android:minLines="5"
        android:paddingStart="4dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:text="@string/select_time"
        android:textColor="@color/tip_title_text"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/set_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/current_time_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/start_time"
            android:textColor="@color/current_time_text"
            android:textSize="15sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_selected_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:textColor="@color/selected_time_text"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/confirm_button"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/confirm_btn_bg"
        android:gravity="center"
        android:paddingStart="6dp"
        android:paddingEnd="5dp"
        android:text="@string/new_schedule_confirm"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/show_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:textSize="14sp" />
</LinearLayout>